--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   button {
     @apply flex items-center py-2 px-3 bg-primaryGreen text-backgroundWhite rounded-lg shadow-lg focus:outline-secondaryBrown;
   }
+
+  input {
+    @apply text-neutralDarkBrown font-light bg-backgroundWhite rounded-lg shadow-sideMenuShadow pl-2 py-1;
+  }
 }
 
 @layer utilities {
