--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     box-sizing: inherit;
   }
 
+  input[type='text'] {
+    -webkit-appearance: none;
+  }
+
   button {
     @apply flex items-center py-2 px-3 bg-primaryGreen font-light text-backgroundWhite rounded-lg shadow-lg focus:outline-secondaryBrown;
   }
