--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@
   select {
     @apply text-neutralDarkBrown font-light bg-backgroundWhite rounded-lg shadow-sideMenuShadow pl-2 py-1;
   }
+
+  i {
+    @apply bg-primaryGreen;
+  }
 }
 
 @layer utilities {
